--- a/src/app/componente/navbar/navbar.component.html
+++ b/src/app/componente/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar bg-primary border-bottom border-bottom-dark" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="#">{{title}}</a>
+        <a class="navbar-brand" href="#">{{text}}</a>
+        <button (click)="text_changer()">{{button_user}}</button>
     </div>
 </nav>
+    
