dando colores con css y aplicandolos

--- a/src/app/componente/dashboard/dashboard.component.html
+++ b/src/app/componente/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<p>dashboard works!</p>
+<div class="dashboard-container">
+    <h1 class="dashboard-title">ANGULAR</h1>
+    <p class="dashboard-description">Angular es una herramienta creada por Google que facilita la construcción de aplicaciones web interactivas y dinámicas. Permite organizar y manejar de manera ordenada todos los elementos de una aplicación, como botones, formularios y texto, ahorrando tiempo y esfuerzo en el desarrollo.</p>
+    <ul class="dashboard-list">
+      <li>André Jesús Torres</li>
+      <li>Nicolas Vassallo</li>
+    </ul>
+  </div>
