--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.navbar {
+    background-color: #ff0000; /* Cambia #ff0000 por el color que desees */
+  }
