--- a/src/app/componente/navbar/navbar.component.html
+++ b/src/app/componente/navbar/navbar.component.html
@@ -1,8 +1,10 @@
-<nav class="navbar bg-primary border-bottom border-bottom-dark" data-bs-theme="dark">
+<nav class="navbar" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">{{title}}</a>
-        <a class="navbar-brand" href="#">{{text}}</a>
-        <button (click)="text_changer()">{{button_user}}</button>
+        <a class="navbar-brand" href="#">
+            <img src="{{image_logo}}" alt="Logo">
+            {{title}}
+        </a>
+        <button class="btn-moderno" (click)="text_changer()">{{button_user}}</button>
     </div>
 </nav>
     
